--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,7 @@
     "dependencies": {
         "axios": "^1.9.0",
         "bcryptjs": "^2.4.3",
-        "cloudinary": "^1.40.0",
+        "cloudinary": "^1.41.3",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "exifr": "^7.1.3",
@@ -23,6 +23,8 @@
         "mongoose": "^7.6.3",
         "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.2",
+        "single": "^0.2.1",
+        "uuid": "^11.1.0",
         "validator": "^13.9.0"
     },
     "devDependencies": {
