--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb+srv://safestreet:abcd@safestreet.n7escz5.mongodb.net/?retryWrites=true&w=majority&appName=SafeStreet
+MONGODB_URI=
 JWT_SECRET=
 PORT=
 JWT_EXPIRES_IN=
